--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a href="#about">最新赛事</a>
         <a href="#features">龙争虎斗</a>
         <a href="#pricing">关于我们</a>
-        <a href="#trainers">招商引资</a>
+        <a href="#ad">招商引资</a>
         <a href="#blogs">精彩回放</a>
     </nav>
 
@@ -92,6 +92,7 @@
 
     <div class="content">
         <span>最新赛事</span>
+        <div class="", style="height:10px"></div>
         <h3 class="title">曼省篮球华人联赛</h3>
         <p>宗旨：团结曼省华人篮球爱好者，努力发展曼省的篮球华人联赛，推动华人篮球的普及和技术水平的提高，促进精神文明建设，增进与各省华人篮球爱好者友谊。</p>
         <div class="box-container">
@@ -112,7 +113,7 @@
                 <p>为新移民新生代更好的传承发展。</p>
             </div>
         </div>
-        <a href="#" class="btn">阅读更多</a>
+        <a href="new.html#rule" class="btn">阅读更多</a>
     </div>
 
 </section>
@@ -167,52 +168,6 @@
 
 </section>
 
-<!-- features section ends -->
-
-<!-- pricing section starts  --
-
-<section class="pricing" id="pricing">
-
-    <div class="information">
-        <span>pricing plan</span>
-        <h3>affordable pricing plan for your</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam dolore excepturi ea suscipit fugiat cum quae, rerum optio mollitia! Tempora?</p>
-        <p> <i class="fas fa-check"></i> cardio exercise </p>
-        <p> <i class="fas fa-check"></i> weight lifting </p>
-        <p> <i class="fas fa-check"></i> diet plans </p>
-        <p> <i class="fas fa-check"></i> overall results </p>
-        <a href="#" class="btn">all pricing</a>
-    </div>
-
-    <div class="plan basic">
-        <h3>basic plan</h3>
-        <div class="price"><span>$</span>30<span>/mo</span></div>
-       <div class="list">
-        <p> <i class="fas fa-check"></i> personal training </p>
-        <p> <i class="fas fa-check"></i> cardio exercise </p>
-        <p> <i class="fas fa-check"></i> weight lifting </p>
-        <p> <i class="fas fa-check"></i> diet plans </p>
-        <p> <i class="fas fa-check"></i> overall results </p>
-       </div>
-       <a href="#" class="btn">get started</a>
-    </div>
-
-    <div class="plan">
-        <h3>premium plan</h3>
-        <div class="price"><span>$</span>90<span>/mo</span></div>
-       <div class="list">
-        <p> <i class="fas fa-check"></i> personal training </p>
-        <p> <i class="fas fa-check"></i> cardio exercise </p>
-        <p> <i class="fas fa-check"></i> weight lifting </p>
-        <p> <i class="fas fa-check"></i> diet plans </p>
-        <p> <i class="fas fa-check"></i> overall results </p>
-       </div>
-       <a href="#" class="btn">get started</a>
-    </div>
-
-</section>
-
-<!-- pricing section ends -->
 
 <!-- trainers section starts  -->
 
@@ -286,12 +241,12 @@
 
 <!-- banner section starts  -->
 
-<section class="banner">
+<section class="banner" id="ad">
 
     <span>招商引资</span>
     <h3>广告招商，先到先得。</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat architecto nesciunt aut sapiente quis inventore quam vitae quod illum incidunt.</p>
-    <a href="#" class="btn">联系我们</a>
+    <a href="new.html#aboutus" class="btn">联系我们</a>
 
 </section>
 
