--- a/new.html
+++ b/new.html
@@ -142,7 +142,7 @@
             <h1 class="heading"> <span>申请报名</span> </h1>
           <div class="contact-feedback">
             <form action="https://formsubmit.co/msclbk@gmail.com" enctype="multipart/form-data" method="post">
-                <input type="hidden" name="_next" value="thanks.html">
+                <input type="hidden" name="_next" value="thank.html">
               <input type="hidden" name="action" value="post">
               <input type="hidden" name="diyid" value="1">
               <input type="hidden" name="do" value="2">
