--- a/new.html
+++ b/new.html
@@ -141,11 +141,12 @@
             <div style="margin-top:25px;"></div>
             <h1 class="heading"> <span>申请报名</span> </h1>
           <div class="contact-feedback">
-            <form action="https://formsubmit.co/msclbk@gmail.com" enctype="multipart/form-data" method="post">
-                <input type="hidden" name="_next" value="thank.html">
+            <form action="https://formsubmit.co/msclbk@gmail.com" enctype="multipart/form-data" method="POST">
+              <input type="hidden" name="_next" value="thank.html">
               <input type="hidden" name="action" value="post">
               <input type="hidden" name="diyid" value="1">
               <input type="hidden" name="do" value="2">
+                <input type="hidden" name="_captcha" value="false">
               <ul class="clearfix">
                 <li class="col-sm-6">
                   <label>
