--- a/new.html
+++ b/new.html
@@ -141,7 +141,7 @@
             <div style="margin-top:25px;"></div>
             <h1 class="heading"> <span>申请报名</span> </h1>
           <div class="contact-feedback">
-            <form action="https://formsubmit.co/msclbk@gmail.com" enctype="multipart/form-data" method="POST">
+            <form action="https://formsubmit.co/msclbk@gmail.com"  method="POST">
               <input type="hidden" name="_next" value="thank.html">
               <input type="hidden" name="action" value="post">
               <input type="hidden" name="diyid" value="1">
