--- a/new.html
+++ b/new.html
@@ -23,13 +23,13 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <span>MSCL</span>曼省华人联赛 </a>
+    <a href="index.html" class="logo"> <span>MSCL</span>曼省华人联赛 </a>
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
     <nav class="navbar">
         <a href="index.html">首页</a>
-        <a href="#rule">最新赛事</a>
+        <a href="new.html#rule">最新赛事</a>
         <a href="#features">龙争虎斗</a>
         <a href="#aboutus">关于我们</a>
         <a href="#aboutus">招商引资</a>
@@ -147,6 +147,7 @@
               <input type="hidden" name="diyid" value="1">
               <input type="hidden" name="do" value="2">
               <input type="hidden" name="_captcha" value="false">
+              <input type="hidden" name="_template" value="table">
               <ul class="clearfix">
                 <li class="col-sm-6">
                   <label>
@@ -309,8 +310,8 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a class="links" href="#home"> 首页</a>
-            <a class="links" href="#about">最新赛事</a>
+            <a class="links" href="index.html"> 首页</a>
+            <a class="links" href="index.html">最新赛事</a>
             <a class="links" href="#features">龙争虎斗</a>
             <a class="links" href="#pricing">关于我们</a>
             <a class="links" href="#trainers">招商引资</a>
