--- a/thank.html
+++ b/thank.html
@@ -23,16 +23,16 @@
 
 <header class="header">
 
-    <a href="#" class="logo"> <span>MSCL</span>曼省华人联赛 </a>
+    <a href="index.html" class="logo"> <span>MSCL</span>曼省华人联赛 </a>
 
     <div id="menu-btn" class="fas fa-bars"></div>
 
     <nav class="navbar">
-        <a href="#home">首页</a>
-        <a href="#about">最新赛事</a>
+        <a href="index.html">首页</a>
+        <a href="new.html#rule">最新赛事</a>
         <a href="#features">龙争虎斗</a>
-        <a href="#pricing">关于我们</a>
-        <a href="#ad">招商引资</a>
+        <a href="#aboutus">关于我们</a>
+        <a href="#aboutus">招商引资</a>
         <a href="#blogs">精彩回放</a>
     </nav>
 
@@ -364,8 +364,8 @@
 
         <div class="box">
             <h3>quick links</h3>
-            <a class="links" href="#home"> 首页</a>
-            <a class="links" href="#about">最新赛事</a>
+            <a class="links" href="index.html"> 首页</a>
+            <a class="links" href="index.html">最新赛事</a>
             <a class="links" href="#features">龙争虎斗</a>
             <a class="links" href="#pricing">关于我们</a>
             <a class="links" href="#trainers">招商引资</a>
