--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="content">
                     <span>Manitoba Sport Chinese League</span>
                     <h3>曼省华人联赛</h3>
-                    <a href="#" class="btn">申请报名</a>
+                    <a href="new.html" class="btn">申请报名</a>
                 </div>
             </div>
 
@@ -60,7 +60,7 @@
                 <div class="content">
                     <span>Manitoba Sport Chinese League</span>
                     <h3>曼省华人联赛</h3>
-                    <a href="#" class="btn">申请报名</a>
+                    <a href="new.html" class="btn">申请报名</a>
                 </div>
             </div>
 
@@ -68,7 +68,7 @@
                 <div class="content">
                     <span>Manitoba Sport Chinese League</span>
                     <h3>曼省华人联赛</h3>
-                    <a href="#" class="btn">申请报名</a>
+                    <a href="new.html" class="btn">申请报名</a>
                 </div>
             </div>
 
@@ -334,9 +334,9 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-1.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/g3EhdmyA3w4?autoplay=0&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -346,9 +346,9 @@
             </div>
             
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-2.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/fILtCNuMYwU?autoplay=0&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -358,9 +358,9 @@
             </div>
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-3.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/8dGTJ1263pw?autoplay=0&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -370,9 +370,9 @@
             </div>
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-4.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/flm-cZ7r6eE?autoplay=1&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -382,9 +382,9 @@
             </div>
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-5.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/e0cKk6Vhyws?autoplay=1&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
