--- a/new.html
+++ b/new.html
@@ -311,7 +311,7 @@
         <div class="box">
             <h3>quick links</h3>
             <a class="links" href="index.html"> 首页</a>
-            <a class="links" href="index.html">最新赛事</a>
+            <a class="links" href="index.html#rule">最新赛事</a>
             <a class="links" href="#features">龙争虎斗</a>
             <a class="links" href="#pricing">关于我们</a>
             <a class="links" href="#trainers">招商引资</a>
