--- a/thank.html
+++ b/thank.html
@@ -287,9 +287,9 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-1.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/1fjhIWJSxfw&t?autoplay=0&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -299,9 +299,9 @@
             </div>
             
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-2.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/b117a8_jALE?autoplay=0&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -311,9 +311,9 @@
             </div>
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-3.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/LAr6oAKieHk&t?autoplay=0&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -323,9 +323,9 @@
             </div>
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-4.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/flm-cZ7r6eE?autoplay=1&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
@@ -335,9 +335,9 @@
             </div>
 
             <div class="swiper-slide slide">
-                <div class="image">
-                    <img src="images/blog-5.jpg" alt="">
-                </div>
+                <iframe width="315 " height="245"
+                src="https://www.youtube.com/embed/e0cKk6Vhyws?autoplay=1&mute=1">
+                </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
                     <h3>fitness is not about being better than someone else</h3>
