--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
             <div class="swiper-slide slide">
                 <iframe width="315 " height="245"
-                src="https://www.youtube.com/embed/g3EhdmyA3w4?autoplay=0&mute=1">
+                src="https://www.youtube.com/embed/1fjhIWJSxfw&t?autoplay=0&mute=1">
                 </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
@@ -347,7 +347,7 @@
             
             <div class="swiper-slide slide">
                 <iframe width="315 " height="245"
-                src="https://www.youtube.com/embed/fILtCNuMYwU?autoplay=0&mute=1">
+                src="https://www.youtube.com/embed/b117a8_jALE?autoplay=0&mute=1">
                 </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
@@ -359,7 +359,7 @@
 
             <div class="swiper-slide slide">
                 <iframe width="315 " height="245"
-                src="https://www.youtube.com/embed/8dGTJ1263pw?autoplay=0&mute=1">
+                src="https://www.youtube.com/embed/LAr6oAKieHk&t?autoplay=0&mute=1">
                 </iframe>
                 <div class="content">
                     <div class="link"> <a href="#">by user</a> <span>|</span> <a href="#">21st may, 2021</a> </div>
